[package]
name = "mm_generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
const_format = "0.2.32"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
